--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
 PROJECT(FasTC CXX C)
 
 SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
+LIST(APPEND CMAKE_PREFIX_PATH ${CMAKE_BINARY_DIR}/external)
 SET(FasTC_MAJOR_VERSION 0)
 SET(FasTC_MINOR_VERSION 0)
 SET(FasTC_PATCH_VERSION 1)
