set CMP0072 to new

--- a/IO/CMakeLists.txt
+++ b/IO/CMakeLists.txt
@@ -80,6 +80,7 @@ SET( HEADERS ${HEADERS} "src/ImageWriterKTX.h" )
 SET( SOURCES ${SOURCES} "src/ImageLoaderASTC.cpp" )
 SET( HEADERS ${HEADERS} "src/ImageLoaderASTC.h" )
 
+CMAKE_POLICY(SET CMP0072 NEW)
 FIND_PACKAGE( OpenGL )
 IF(OPENGL_FOUND)
   INCLUDE_DIRECTORIES( ${OPENGL_INCLUDE_DIRS} )
